Uncomment reporting section and update javadoc plugin configuration to use 2.6.1 format (with reportSets)
git-svn-id: https://svn.apache.org/repos/asf/incubator/shiro/trunk@908277 13f79535-47bb-0310-9956-ffa450edef68